2011-05-06  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        Make more PluginInfoStore member functions static
        https://bugs.webkit.org/show_bug.cgi?id=60401

        This is a first step towards making PluginInfoStore thread safe.

        * UIProcess/Plugins/PluginInfoStore.cpp:
        (WebKit::PluginInfoStore::loadPluginsIfNecessary):
        (WebKit::PluginInfoStore::loadPlugin):
        * UIProcess/Plugins/PluginInfoStore.h:
        * UIProcess/Plugins/mac/PluginInfoStoreMac.mm:
        (WebKit::PluginInfoStore::shouldUsePlugin):
        * UIProcess/Plugins/unix/PluginInfoStoreUnix.cpp:
        (WebKit::PluginInfoStore::shouldUsePlugin):
        * UIProcess/Plugins/win/PluginInfoStoreWin.cpp:
        (WebKit::PluginInfoStore::shouldUsePlugin):

2011-05-06  Adam Roben  <aroben@apple.com>

        Mac build fix

        * WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm: Added a
        missing #import.

2011-05-06  Adam Roben  <aroben@apple.com>

        Show/hide windowed plugins according to the plugin element's visibility CSS property

        Fixes <http://webkit.org/b/60285> <rdar://problem/9152400> REGRESSION (WebKit2): A white
        rectangle covers up important UI elements when composing a new message at mail.yahoo.com
        with BrowserPlus! plug-in installed

        Reviewed by Anders Carlsson.

        * PluginProcess/PluginControllerProxy.cpp:
        (WebKit::PluginControllerProxy::isPluginVisible):
        * PluginProcess/PluginControllerProxy.h:
        Stubbed out.

        * Shared/win/WindowGeometry.cpp:
        (WebKit::WindowGeometry::WindowGeometry):
        (WebKit::WindowGeometry::encode):
        (WebKit::WindowGeometry::decode):
        * Shared/win/WindowGeometry.h:
        Added visible member.

        * UIProcess/win/WebView.cpp:
        (WebKit::WebView::updateChildWindowGeometries): Show or hide the window as specified in the
        geometry.
